Merged with frontend, fixed add task and add robot issues. Fixed issues with databases and attributes being eagerly loaded when it is not necessary.